docker-compose-homework adjustment

--- a/docker_compose_practice/Dockerfile
+++ b/docker_compose_practice/Dockerfile
@@ -3,4 +3,6 @@ RUN apk add mysql-client
 ADD ./files/test.sql .
 ENTRYPOINT [ "/bin/bash" ]
 CMD /usr/bin/mysql -uroot -p'passw0rd123' -h172.21.0.2 -P3306 -e "source /test.sql"
-##CMD ["/usr/bin/mysql", "-uroot", "-p'passw0rd123'", "-h172.21.0.2", "-P3306", "-e "source /test.sql""]
+##below mentioned doesn't work too :(
+##ENTRYPOINT [ "/usr/bin/mysql" ]
+##CMD ["-uroot", "-p'passw0rd123'", "-h172.21.0.2", "-P3306", "-e "source /test.sql""]
